# OpenAnimationReplacer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: clang_format.yaml  main.yml
cmake/: version.rc.in
cmake/ports/mergemapper/: portfile.cmake  vcpkg.json
cmake/ports/rapidjson/: portfile.cmake
src/: ActiveAnimationPreview.cpp  ActiveAnimationPreview.h  ActiveClip.cpp  ActiveClip.h  ActiveSynchronizedAnimation.cpp  ActiveSynchronizedAnimation.h  ActiveSynchronizedClip.cpp  ActiveSynchronizedClip.h  AnimationEventLog.cpp  AnimationEventLog.h  AnimationFileHashCache.cpp  AnimationFileHashCache.h  AnimationLog.cpp  AnimationLog.h  BaseConditions.cpp  BaseConditions.h  BaseFunctions.cpp  BaseFunctions.h  CMakeLists.txt  Conditions.cpp  Conditions.h  Containers.cpp  Containers.h  DetectedProblems.cpp  DetectedProblems.h  FakeClipGenerator.cpp  FakeClipGenerator.h  Functions.cpp  Functions.h  Hooks.cpp  Hooks.h  Jobs.cpp  Jobs.h  ModAPI.cpp  ModAPI.h  Offsets.h  OpenAnimationReplacer.cpp  OpenAnimationReplacer.h  PCH.h  Parsing.cpp  (+17 more)
src/API/: OpenAnimationReplacer-ConditionTypes.cpp  OpenAnimationReplacer-ConditionTypes.h  OpenAnimationReplacer-FunctionTypes.cpp  OpenAnimationReplacer-FunctionTypes.h  OpenAnimationReplacer-SharedTypes.h  OpenAnimationReplacerAPI-Animations.cpp  OpenAnimationReplacerAPI-Animations.h  OpenAnimationReplacerAPI-Conditions.cpp  OpenAnimationReplacerAPI-Conditions.h  OpenAnimationReplacerAPI-Functions.cpp  OpenAnimationReplacerAPI-Functions.h  OpenAnimationReplacerAPI-UI.cpp  OpenAnimationReplacerAPI-UI.h
src/Havok/: Havok.h
src/UI/: UIAnimationEventLog.cpp  UIAnimationEventLog.h  UIAnimationLog.cpp  UIAnimationLog.h  UIAnimationQueue.cpp  UIAnimationQueue.h  UIComboFilter.h  UICommon.cpp  UICommon.h  UIErrorBanner.cpp  UIErrorBanner.h  UIMain.cpp  UIMain.h  UIManager.cpp  UIManager.h  UIWelcomeBanner.cpp  UIWelcomeBanner.h  UIWindow.cpp  UIWindow.h
src/UI/ImGui/: imgui_impl_win32.cpp  imgui_impl_win32.h
